--- a/src/pages/landingPage/styles.css
+++ b/src/pages/landingPage/styles.css
@@ -1,7 +1,4 @@
-
-
 .landing-global {
-    /* background-color: #F2FAFF; */
     background-color: white;
     position: relative;
     z-index: 2;
@@ -11,13 +8,20 @@
     flex-direction: column;
 }
 
+.introducion-navbar {
+    position: relative;
+    background: #F2FAFF;
+    z-index: 1;
+}
+
+/* Introdução */
+
 .landing-information {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     margin: 0 25px;
-
 }
 
 .eclipseBlue1 {
@@ -28,7 +32,6 @@
     top: -371px;
     z-index: -1;
     background: radial-gradient(41.7% 41.71% at 49.95% 54.05%, rgba(87, 174, 250, 0.5) 0%, rgba(136, 191, 232, 0.02) 85.11%);
-
 }
 
 .destaque {
@@ -53,14 +56,29 @@
     display: flex;
     flex-direction: column;
     gap: 59px;
-  
 }
+
+.airplane-img {
+    z-index: 1;
+    position: relative;
+    top: 17px;
+    right: 80px;
+}
+
+.eclipsePink1 {
+    position: absolute;
+    left: 43px;
+    top: 457px;
+}
+
+/* ESPECIALIDADES */
 
 .landing-especialidads {
     background-color: white;
     gap: 29px;
     display: flex;
     flex-direction: column;
+    z-index: 1;
 }
 
 .especialidades {
@@ -89,6 +107,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0px 0px 37px 0;
 
 }
 
@@ -100,9 +119,8 @@
     box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
-    padding: 0 16px 29px;
+    padding: 0 9px 0px;
     z-index: 1;
 }
 
@@ -112,12 +130,13 @@
     background: linear-gradient(89.85deg, #9EC7F8 13.96%, #D295EF 73.31%);
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
     border-radius: 20px 20px 0px 0px;
+    z-index: 1;
 }
 
 .h1cardEspec {
     font-weight: 900;
     font-size: 15px;
-    line-height: 20px;
+    line-height: 41px;
     color: #5B89AD;
     border: 1px solid #FFFFFF;
     text-shadow: 0px 2px 4px #FFFFFF;
@@ -126,7 +145,7 @@
 .pCardEspec {
     font-style: italic;
     font-weight: 700;
-    font-size: 11px;
+    font-size: 13px;
     line-height: 15px;
     text-align: center;
     color: #5B89AD;
@@ -134,11 +153,14 @@
     text-shadow: 0px 2px 4px #FFFFFF;
 }
 
+/* MEDICOS */
+
 .landing-doctors-global {
     display: flex;
     flex-direction: column;
     gap: 34px;
     background: white;
+    z-index: 1;
 }
 
 .h1-doctors {
@@ -165,18 +187,18 @@
 .carousel-doctors {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 14px;
+    justify-content: center;
     z-index: 1;
     position: relative;
-
+    gap: 20px;
+    margin: 14px;
 }
 
 .eclipsePink-doctors {
     position: absolute;
     width: 1121.27px;
     height: 680.12px;
-    left: -3.07px;
+    left: 45px;
     top: 1154.75px;
     background: radial-gradient(45.76% 45.76% at 50% 50%, rgba(175, 25, 221, 0.495) 0%, rgba(194, 167, 221, 0.015) 100%);
     transform: rotate(0.5deg);
@@ -186,11 +208,12 @@
     position: absolute;
     width: 718.61px;
     height: 945.21px;
-    left: -398px;
-    top: 964.91px;
+    right: -48px;
+    top: 958px;
     background: radial-gradient(37.45% 37.25% at 38.13% 56.49%, rgba(87, 174, 250, 0.5) 0%, rgba(136, 191, 232, 0.02) 85.11%);
-    transform: rotate(-55.04deg);
 }
+
+/* PLANOS DE SAUDE */
 
 .landing-health-global {
     display: flex;
@@ -220,15 +243,38 @@
     left: 138px;
 }
 
+
 .carousel-health {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     padding: 14px;
     z-index: 1;
     position: relative;
-
+    gap: 15px;
 }
+
+.eclipseBlue-health {
+    position: fixed;
+    width: 718.61px;
+    height: 945.21px;
+    left: -36px;
+    top: 1px;
+    transform: translateX(-50%);
+    background: radial-gradient(37.45% 37.25% at 54.82% 58.51%, rgba(87, 174, 250, 0.4) 0%, rgba(136, 191, 232, 0.016) 85.11%);
+}
+
+.eclipsePink-health {
+    position: fixed;
+    width: 1121.27px;
+    height: 680.12px;
+    left: 57.93px;
+    top: 200px;
+    background: radial-gradient(45.76% 45.76% at 50% 50%, rgba(175, 25, 221, 0.396) 0%, rgba(194, 167, 221, 0.012) 100%);
+    transform: rotate(0.5deg);
+}
+
+/* FOOTER */
 
 .landing-footer {
     height: 45px;
@@ -240,22 +286,366 @@
     color: #FFFFFF;
     align-items: center;
     justify-content: center;
+    z-index: 1;
 }
 
-.button-health-global{
-    display: flex;
-    justify-content: center;
+
+@media(min-width: 768px) {
+    .eclipseBlue1 {
+        position: absolute;
+        left: -252px;
+        top: -513px;
+    }
+
+    .information-container {
+        display: flex;
+        flex-direction: row;
+        transform: scale(-1);
+        align-items: center;
+    }
+
+    .girl-img {
+        transform: scale(-1);
+        z-index: 1;
+        position: relative;
+    }
+
+    .introducion {
+        transform: scale(-1);
+    }
+
+    .airplane-img {
+        position: relative;
+        top: -58px;
+        right: 252px;
+    }
+
+    .eclipsePink1 {
+        position: absolute;
+        left: 440px;
+        top: 200px;
+    }
+
+
+    .card-global {
+        gap: 30px;
+    }
+
+    .eclipseBlue-doctors {
+        position: absolute;
+        width: 1270px;
+        right: -53px;
+        top: 639px;
+    }
+
+    .eclipsePink-doctors {
+        position: absolute;
+        left: 215.93px;
+        top: 816.75px;
+    }
+
+    .carousel-health {
+        display: flex;
+    }
+
+    .eclipseBlue-health {
+        position: fixed;
+        width: 718px;
+        height: 945px;
+        left: -307px;
+        top: -230px;
+        transform: rotate(-55.04deg);
+    }
+
+    .eclipsePink-health {
+        position: fixed;
+        width: 1469.06px;
+        height: 700px;
+        left: 150.93px;
+        top: -85px;
+    }
+
 }
 
-.button-health {
-    width: 91px;
-    height: 31px;
-    background: linear-gradient(178.8deg, #FFFFFF 1.02%, #FCF4FE 62.97%, #EEBEFC 90.23%, #D667F7 119.96%, #CE49F6 119.97%);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 30px;
-    color: #AF19DD;
-    font-weight: 900;
-    font-size: 14px;
-    line-height: 19px;
+@media(min-width: 1024px) {
+    .eclipseBlue1 {
+        position: absolute;
+        left: -252px;
+        top: -513px;
 
+    }
+
+    .landing-information {
+        margin: 0 50px;
+    }
+
+    .information-container {
+        display: flex;
+        flex-direction: row;
+        transform: scale(-1);
+        align-items: center;
+    }
+
+    .girl-img {
+        transform: scale(-1);
+        z-index: 1;
+        position: relative;
+        min-width: 400px;
+    }
+
+    .introducion {
+        transform: scale(-1);
+        font-size: 21px;
+    }
+
+    .destaque {
+        font-size: 34px;
+    }
+
+    .airplane-img {
+        position: relative;
+        top: -90px;
+        right: 335px;
+        width: 350px;
+    }
+
+    .eclipsePink1 {
+        position: absolute;
+        left: 697px;
+        top: 328px;
+    }
+
+    .especialidades {
+        font-size: 30px;
+    }
+
+    .linhaEspec {
+        height: 4px;
+        position: relative;
+        left: 176px;
+    }
+
+    .cardEspec {
+        width: 262px;
+        height: 342px;
+        gap: 8px;
+    }
+
+    .icon {
+        width: 45px;
+    }
+
+    .linhaCardEspec {
+        width: 262px;
+        height: 15px;
+    }
+
+    .h1cardEspec {
+        font-size: 22px;
+    }
+
+    .pCardEspec {
+        font-size: 19px;
+        line-height: 22px;
+    }
+
+    .card-global {
+        gap: 30px;
+    }
+
+    .carousel-doctors-global {
+        display: flex;
+        flex-direction: column;
+        gap: 17px;
+    }
+
+    .eclipseBlue-doctors {
+        position: absolute;
+        top: 1028px;
+        z-index: -1;
+    }
+
+    .eclipsePink-doctors {
+        position: absolute;
+        left: 293.93px;
+        top: 1218px;
+        z-index: -1;
+    }
+
+    .h1-doctors {
+        font-size: 30px;
+    }
+
+    .linhaDoctors {
+        width: 89px;
+        height: 4px;
+        position: relative;
+        left: 178px;
+    }
+
+    .carousel-health {
+        display: flex;
+    }
+
+    .eclipseBlue-health {
+        position: fixed;
+        width: 1000px;
+        left: -412px;
+        top: -73px;
+    }
+
+    .eclipsePink-health {
+        position: fixed;
+        left: 241px;
+        top: 127px;
+    }
+
+    .healths {
+        font-size: 30px;
+    }
+
+    .linhaHealth {
+        width: 89px;
+        height: 4px;
+        position: relative;
+        left: 186px;
+    }
+
+    .landing-footer {
+        height: 55px;
+        font-size: 15px;
+    }
+}
+
+@media(min-width: 1336px) {
+    .eclipseBlue1 {
+        position: absolute;
+        left: -347px;
+        top: -363px;
+    }
+
+    .girl-img {
+        min-width: 500px;
+    }
+
+    .introducion {
+        font-size: 24px;
+        line-height: 36px;
+    }
+
+    .destaque {
+        font-size: 37px;
+    }
+
+    .airplane-img {
+        position: relative;
+        top: -115px;
+        right: 465px;
+        width: 410px;
+    }
+
+    .eclipsePink1 {
+        position: absolute;
+        left: 756px;
+        top: 230px;
+        width: 600px;
+        z-index: -1;
+    }
+
+    .especialidades {
+        font-size: 35px;
+        line-height: 40px;
+    }
+
+    .linhaEspec {
+        height: 5px;
+        position: relative;
+        left: 176px;
+        width: 110px;
+    }
+
+    .cardEspec {
+        width: 310px;
+        height: 445px;
+    }
+
+    .icon {
+        width: 60px;
+    }
+
+    .linhaCardEspec {
+        width: 310px;
+        height: 18px;
+    }
+
+    .h1cardEspec {
+        font-size: 25px;
+    }
+
+    .pCardEspec {
+        font-size: 23px;
+        line-height: 28px;
+    }
+
+    .carousel-doctors-global {
+        display: flex;
+        flex-direction: column;
+        gap: 17px;
+    }
+
+    .eclipseBlue-doctors {
+        position: absolute;
+    top: 1050px;
+    width: 1612px;
+    height: 1555px;
+    right: 193px;
+    }
+
+    .eclipsePink-doctors {
+        position: absolute;
+    left: 371.93px;
+    top: 1436px;
+    width: 1348px;
+    height: 1000px;
+    }
+
+    .h1-doctors {
+        font-size: 35px;
+        line-height: 40px
+    }
+
+    .linhaDoctors {
+        height: 5px;
+        position: relative;
+        left: 197px;
+    }
+
+    .eclipseBlue-health {
+        position: fixed;
+        width: 1000px;
+        left: -412px;
+        top: -73px;
+    }
+
+    .eclipsePink-health {
+        position: fixed;
+        left: 241px;
+        top: 127px;
+    }
+
+    .healths {
+        font-size: 35px;
+        line-height: 40px;
+    }
+
+    .linhaHealth {
+        height: 5px;
+        position: relative;
+        left: 218px;
+    }
+
+    .landing-footer {
+        height: 62px;
+        font-size: 17px;
+    }
 }
