--- a/src/components/NavbarLanding/styles.css
+++ b/src/components/NavbarLanding/styles.css
@@ -31,6 +31,16 @@
     text-shadow: 0px 2px 4px #FFFFFF;
 }
 
+.linha-menu{
+    background: linear-gradient(90deg, #97CEF9 8.17%, #D296EF 81.47%, #D194EF 94.12%);
+    width: 100%;
+    height: 1px;
+}
+
+.img-icon-login{
+    width: 25px;
+}
+
 @media(min-width: 1024px) {
     .navbar-item{
         gap: 35px;
@@ -44,6 +54,10 @@
 
     .item {
         font-size: 17px;
+    }
+
+    .img-icon-login{
+        width: 35px;
     }
 
 }
